--- a/views/graph.handlebars
+++ b/views/graph.handlebars
@@ -39,7 +39,7 @@
   const graphSimulation = d3.forceSimulation();
 
   // Create forces to act upon simulation
-  const linkForce = d3.forceLink().id(d => d.title).distance(20).strength(0.3);
+  const linkForce = d3.forceLink().id(d => d.url).distance(20).strength(0.3);
   const chargeForce = d3.forceManyBody().strength(-200);
   const centerForce = d3.forceCenter(width / 2, height / 2);
   const collisionForce = d3.forceCollide(25);
@@ -264,7 +264,6 @@
         .on('start', dragStarted)
         .on('drag', dragged)
         .on('end', dragEnded))
-    //.merge(nodeElements)
 
 
     svgCanvas.call(d3.zoom()
@@ -293,7 +292,7 @@
 
     //create node and link object that d3 understands
     graphData.results.forEach(link => {
-      newNodes.push({ title: link.url, url: link.url, group: link.group, keyword: link.keyword });
+      newNodes.push({ title: link.title, url: link.url, group: link.group, keyword: link.keyword });
       newLinks.push({ source: `${link.prevURL ? link.prevURL : link.url}`, target: link.url });
     });
 
